Revision history for Perl extension AnyEvent.

TODO: document TCP_*** constants
TODO: catch AE::xxx for anyevent strict and anyevent debug
TODO: anyevent::trace? or debug tracing all watchers?
TODO: anyevent strict checking for $_ changes?

TODO: wbuf_max for anyevent
TODO: fix with the rest: POE + IO::Async? No go. Tk + Event? No go. Again: if
	- set CLOEXEC flag on parent-side fd's in AnyEvent::Util::run_cmd,
          to avoid leaking them to any child processes.

5.29   Sun Dec  5 10:49:21 CET 2010
        - convert EV backend to EV 4.00 API (so better upgrade EV too).
        - AE::Handle: implement dynamic read_size adjustment, add
          max_read_size parameter, reduce default read_size to 2048.
        - add some FAQ entries for servers and/or on_eof vs. on_error.
	- work around OS bugs (cygwin again) when lingering in AE::Handle.
        - reduce memory usage slightly when connect was used in AE::Handle.
        - wrok around more segfaults in Tk.
        - document tls_ctx => undef as valid.
        - detect WNOHANG value at compiletime.
        - include some probably linux-only support for building AnyEvent
          as part of the perl core.
        - improve compatibility of t/08_idna.t to perl 5.8.
        - make AnyEvent::Strict truly optional (in case somebody builds a
          minimal perl...).

5.28   Wed Oct 13 04:14:23 CEST 2010
        - due to a glitch, AnyEvent's internal getprotobyname wasn't
          actually used in tcp_server.
        - implement AnyEvent::CondVar->new method, which was documented but
          missing.
        - support autoloading of read types in unshift_read.
        - AnyEvent::Strict: do the test for invalid fh arguments differently,
          resulting in more informative error messages.
        - new AnyEvent::FAQ manpage.
	- clarify that you can actually call push_read etc. in on_read.
        - put keys and certs in /tmp, not into the current directory,