@@ -44,5 +44,31 @@ WriteMakefile(
            "Async::Interrupt" => 1.0,
         }
     },
+    PM           => {
+        'lib/AE.pm'                      => '$(INST_LIBDIR)/AE.pm',
+        'lib/AnyEvent.pm'                => '$(INST_LIBDIR)/AnyEvent.pm',
+        'lib/AnyEvent/DNS.pm'            => '$(INST_LIBDIR)/AnyEvent/DNS.pm',
+        'lib/AnyEvent/Debug.pm'          => '$(INST_LIBDIR)/AnyEvent/Debug.pm',
+        'lib/AnyEvent/FAQ.pod'           => '$(INST_LIBDIR)/AnyEvent/FAQ.pod',
+        'lib/AnyEvent/Handle.pm'         => '$(INST_LIBDIR)/AnyEvent/Handle.pm',
+        'lib/AnyEvent/Impl/EV.pm'        => '$(INST_LIBDIR)/AnyEvent/Impl/EV.pm',
+        'lib/AnyEvent/Impl/Event.pm'     => '$(INST_LIBDIR)/AnyEvent/Impl/Event.pm',
+        'lib/AnyEvent/Impl/EventLib.pm'  => '$(INST_LIBDIR)/AnyEvent/Impl/EventLib.pm',
+        'lib/AnyEvent/Impl/Glib.pm'      => '$(INST_LIBDIR)/AnyEvent/Impl/Glib.pm',
+        'lib/AnyEvent/Impl/IOAsync.pm'   => '$(INST_LIBDIR)/AnyEvent/Impl/IOAsync.pm',
+        'lib/AnyEvent/Impl/Irssi.pm'     => '$(INST_LIBDIR)/AnyEvent/Impl/Irssi.pm',
+        'lib/AnyEvent/Impl/POE.pm'       => '$(INST_LIBDIR)/AnyEvent/Impl/POE.pm',
+        'lib/AnyEvent/Impl/Perl.pm'      => '$(INST_LIBDIR)/AnyEvent/Impl/Perl.pm',
+        'lib/AnyEvent/Impl/Qt.pm'        => '$(INST_LIBDIR)/AnyEvent/Impl/Qt.pm',
+        'lib/AnyEvent/Impl/Tk.pm'        => '$(INST_LIBDIR)/AnyEvent/Impl/Tk.pm',
+        'lib/AnyEvent/Intro.pod'         => '$(INST_LIBDIR)/AnyEvent/Intro.pod',
+        'lib/AnyEvent/Socket.pm'         => '$(INST_LIBDIR)/AnyEvent/Socket.pm',
+        'lib/AnyEvent/Strict.pm'         => '$(INST_LIBDIR)/AnyEvent/Strict.pm',
+        'lib/AnyEvent/TLS.pm'            => '$(INST_LIBDIR)/AnyEvent/TLS.pm',
+        'lib/AnyEvent/Util.pm'           => '$(INST_LIBDIR)/AnyEvent/Util.pm',
+        'lib/AnyEvent/Util/idna.pl'      => '$(INST_LIBDIR)/AnyEvent/Util/idna.pl',
+        'lib/AnyEvent/Util/uts46data.pl' => '$(INST_LIBDIR)/AnyEvent/Util/uts46data.pl',
+        'lib/AnyEvent/constants.pl'      => '$(INST_ARCHLIBDIR)/AnyEvent/constants.pl',
+    },
 );
 
