@@ -7,8 +7,12 @@ TODO: anyevent strict checking for $_ changes?
 
 TODO: wbuf_max for anyevent
 TODO: fix with the rest: POE + IO::Async? No go. Tk + Event? No go. Again: if
+TODO: ioasync stuff
+TODO: install arch-dependen constants.pl in some arch-dependend path. somehow.
 	- set CLOEXEC flag on parent-side fd's in AnyEvent::Util::run_cmd,
           to avoid leaking them to any child processes.
+        - try to force files into the arch-dependend lib directory, for the
+          half-"turly obsessive compulsive person"(s) that depend on it.
 
 5.29   Sun Dec  5 10:49:21 CET 2010
         - convert EV backend to EV 4.00 API (so better upgrade EV too).
